# math_cpp

./: .gitignore  CMakeLists.txt  dmath.cpp  dmath.h  include.bat  math.cpp  math.h
include/: array.h  const.h  math_cpp.h  matrix.h  trigonometry.h  vector2.h  vector3.h
source/: const.h  functions.cpp  matrix.cpp  matrix.h  trigonometry.cpp  vector2.cpp  vector3.cpp
test/: CmakeLists.txt  main.cpp
